src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h


	//=============================================================================================================
		
    //======== PCI-R32IOEV-RTEX 전용 함수=========================================================================== 
    // I/O 포트로 할당된 HPI register 를 읽고 쓰기위한 API 함수.
    // I/O Registers for HOST interface.
    // I/O 00h Host status register (HSR)
    // I/O 04h Host-to-DSP control register (HDCR)
    // I/O 08h DSP page register (DSPP)
    // I/O 0Ch Reserved
    DWORD   __stdcall AxlSetIoPort(long lBoardNo, DWORD dwAddr, DWORD dwData);

    DWORD   __stdcall AxlGetIoPort(long lBoardNo, DWORD dwAddr, DWORD* dwpData);


    //======== PCI-R3200-MLIII 전용 함수=========================================================================== 
/*
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize);
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize);
    // M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *lFWUpdataData, DWORD dwLength);
    // M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, BYTE bCrcData, DWORD *lFWUpdataResult);
    // M-III Master 보드 펌웨어 업데이트 실행
    DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwSectorNo);
    // M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwSectorNo, DWORD *dwIsDone);
*/
    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize, DWORD dwProcTotalStepNo);

    // M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize, DWORD *dwProcTotalStepNo);


    // M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *pdwPacketData, DWORD dwPacketSize);

    // M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, DWORD *dwPacketSize);


    // M-III Master 보드 펌웨어 업데이트 실행
    DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwFlashBurnStepNo);

    // M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwFlashBurnStepNo, DWORD *dwIsFlashBurnDone);


    // M-III Master 보드 EEPROM 데이터 설정 함수
    DWORD   __stdcall AxlM3SetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);

    // M-III Master 보드 EEPROM 데이터 가져오기 함수
    DWORD   __stdcall AxlM3GetCFGData(long lBoardNo, DWORD *pCmdData, DWORD CmdDataSize);


    // M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 함수
    DWORD   __stdcall AxlM3SetMCParaUpdateInit(long lBoardNo, WORD wCh0Slaves, WORD wCh1Slaves, DWORD dwCh0CycTime, DWORD dwCh1CycTime, DWORD dwChInfoMaxRetry);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 결과 확인 함수
    DWORD   __stdcall AxlM3GetMCParaUpdateInit(long lBoardNo, WORD *wCh0Slaves, WORD *wCh1Slaves, DWORD *dwCh0CycTime, DWORD *dwCh1CycTime, DWORD *dwChInfoMaxRetry);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 함수
    DWORD   __stdcall AxlM3SetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD wChannel, WORD wSlaveAddr, DWORD dwProtoCalType, DWORD dwTransBytes, DWORD dwDeviceCode);

    // M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 결과 확인 함수
    DWORD   __stdcall AxlM3GetMCParaUpdateCopy(long lBoardNo, WORD wIdx, WORD *wChannel, WORD *wSlaveAddr, DWORD *dwProtoCalType, DWORD *dwTransBytes, DWORD *dwDeviceCode);


    // M-III Master 보드내에 레지스터를 DWord단위로 확인 함수
    DWORD   __stdcall AxlBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);

    // M-III Master 보드내에 레지스터를 DWord단위로 설정 함수
    DWORD   __stdcall AxlBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);


    // 보드내에 확장 레지스터를 DWord단위로 설정 및 확인한다.
    DWORD    __stdcall AxlBoardReadDWordEx(long lBoardNo, DWORD dwOffset, DWORD *dwData);

    DWORD    __stdcall AxlBoardWriteDWordEx(long lBoardNo, DWORD dwOffset, DWORD dwData);


    // 서보를 정지 모드로 설정 함수
    DWORD   __stdcall AxmM3ServoSetCtrlStopMode(long lAxisNo, BYTE bStopMode);

    // 서보를 Lt 선택 상태로 설정 함수
    DWORD   __stdcall AxmM3ServoSetCtrlLtSel(long lAxisNo, BYTE bLtSel1, BYTE bLtSel2);

    // 서보의 IO 입력 상태를 확인 함수
    DWORD   __stdcall AxmStatusReadServoCmdIOInput(long lAxisNo, DWORD *upStatus);
    
    // 서보의 보간 구동 함수
    DWORD   __stdcall AxmM3ServoExInterpolate(long lAxisNo, DWORD dwTPOS, DWORD dwVFF, DWORD dwTFF, DWORD dwTLIM, DWORD dwExSig1, DWORD dwExSig2);

    // 서보 엑츄레이터 바이어스 설정 함수
    DWORD   __stdcall AxmM3ServoSetExpoAccBias(long lAxisNo, WORD wBias);

    // 서보 엑츄레이터 시간 설정 함수
    DWORD   __stdcall AxmM3ServoSetExpoAccTime(long lAxisNo, WORD wTime);

    // 서보의 이동 시간을 설정 함수
    DWORD   __stdcall AxmM3ServoSetMoveAvrTime(long lAxisNo, WORD wTime);

    // 서보의 Acc 필터 설정 함수
    DWORD   __stdcall AxmM3ServoSetAccFilter(long lAxisNo, BYTE bAccFil);

    // 서보의 상태 모니터1 설정 함수
    DWORD   __stdcall AxmM3ServoSetCprmMonitor1(long lAxisNo, BYTE bMonSel);

    // 서보의 상태 모니터2 설정 함수
    DWORD   __stdcall AxmM3ServoSetCprmMonitor2(long lAxisNo, BYTE bMonSel);

    // 서보의 상태 모니터1 확인 함수
    DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor1(long lAxisNo, DWORD *upStatus);

    // 서보의 상태 모니터2 확인 함수
    DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor2(long lAxisNo, DWORD *upStatus);

    // 서보 엑츄레이터 Dec 설정 함수
    DWORD   __stdcall AxmM3ServoSetAccDec(long lAxisNo, WORD wAcc1, WORD wAcc2, WORD wAccSW, WORD wDec1, WORD wDec2, WORD wDecSW);

    // 서보 정지 설정 함수
    DWORD   __stdcall AxmM3ServoSetStop(long lAxisNo, long lMaxDecel);


//========== 표준 I/O 기기 공통 커맨드 =========================================================================
    // Network제품 각 슬레이브 기기의 파라미터 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 파라미터 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 ID값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationIdRd(long lBoardNo, long lModuleNo, BYTE bIdCode, BYTE bOffset, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 무효 커맨드로 사용하는 함수
    DWORD   __stdcall AxlM3SetStationNop(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 셋업을 실시하는 함수
    DWORD   __stdcall AxlM3SetStationConfig(long lBoardNo, long lModuleNo, BYTE bConfigMode, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 알람 및 경고 상태 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationAlarm(long lBoardNo, long lModuleNo, WORD wAlarmRdMod, WORD wAlarmIndex, BYTE bModuleType, WORD *pwAlarmData);

    // Network제품 각 슬레이브 기기의 알람 및 경고 상태를 해제하는 함수
    DWORD   __stdcall AxlM3SetStationAlarmClear(long lBoardNo, long lModuleNo, WORD wAlarmClrMod, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 동기통신을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationSyncSet(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationConnect(long lBoardNo, long lModuleNo, BYTE bVer, BYTE bComMode, BYTE bComTime, BYTE bProfileType, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결 끊음을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationDisConnect(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기의 비휘발성 파라미터 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 비휘발성 파라미터 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);

    // Network제품 각 슬레이브 기기의 메모리 설정 값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);

    // Network제품 각 슬레이브 기기의 메모리 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);