src/driver/ajinextek/AXL(Library)/Visual Basic/AXDev.bas


    '======== PCI-R32IOEV-RTEX 전용 함수===========================================================================
    ' I/O 포트로 할당된 HPI register 를 읽고 쓰기위한 API 함수.
    ' I/O Registers for HOST interface.
    ' I/O 00h Host status register (HSR)
    ' I/O 04h Host-to-DSP control register (HDCR)
    ' I/O 08h DSP page register (DSPP)
    ' I/O 0Ch Reserved
    Public Declare Function AxlSetIoPort Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwAddr As Long, ByVal dwData As Long) As Long
    Public Declare Function AxlGetIoPort Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwAddr As Long, ByRef dwpData As Long) As Long

    '======== PCI-R3200-MLIII 전용 함수===========================================================================
    '/*
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    'DWORD   __stdcall AxlM3SetFWUpdateInit(long lBoardNo, DWORD dwTotalPacketSize);
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    'DWORD   __stdcall AxlM3GetFWUpdateInit(long lBoardNo, DWORD *dwTotalPacketSize);
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    'DWORD   __stdcall AxlM3SetFWUpdateCopy(long lBoardNo, DWORD *lFWUpdataData, DWORD dwLength);
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    'DWORD   __stdcall AxlM3GetFWUpdateCopy(long lBoardNo, BYTE bCrcData, DWORD *lFWUpdataResult);
    ' M-III Master 보드 펌웨어 업데이트 실행
    'DWORD   __stdcall AxlM3SetFWUpdate(long lBoardNo, DWORD dwSectorNo);
    ' M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    'DWORD   __stdcall AxlM3GetFWUpdate(long lBoardNo, DWORD *dwSectorNo, DWORD *dwIsDone);
    '*/
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 함수
    Public Declare Function AxlM3SetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwTotalPacketSize As Long, ByVal dwProcTotalStepNo As Long) As Long
    ' M-III Master 보드 펌웨어 업데이트 기본 정보 설정 결과 확인 함수
    Public Declare Function AxlM3GetFWUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwTotalPacketSize As Long, ByRef dwProcTotalStepNo As Long) As Long

    ' M-III Master 보드 펌웨어 업데이트 자료 전달 함수
    Public Declare Function AxlM3SetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef pdwPacketData As Long, ByVal dwPacketSize As Long) As Long
    ' M-III Master 보드 펌웨어 업데이트 자료 전달 결과 확인 함수
    Public Declare Function AxlM3GetFWUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwPacketSize As Long) As Long

    ' M-III Master 보드 펌웨어 업데이트 실행
    Public Declare Function AxlM3SetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwFlashBurnStepNo As Long) As Long
    ' M-III Master 보드 펌웨어 업데이트 실행 결과 확인
    Public Declare Function AxlM3GetFWUpdate Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwFlashBurnStepNo As Long, ByRef dwIsFlashBurnDone As Long) As Long

    ' M-III Master 보드 EEPROM 데이터 설정 함수
    Public Declare Function AxlM3SetCFGData Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef pCmdData As Long, ByVal CmdDataSize As Long) As Long
    ' M-III Master 보드 EEPROM 데이터 가져오기 함수
    Public Declare Function AxlM3GetCFGData Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef pCmdData As Long, ByVal CmdDataSize As Long) As Long

    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 함수
    Public Declare Function AxlM3SetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wCh0Slaves As Long, ByVal wCh1Slaves As Long, ByVal dwCh0CycTime As Long, ByVal dwCh1CycTime As Long, ByVal dwChInfoMaxRetry As Long) As Long
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 설정 결과 확인 함수
    Public Declare Function AxlM3GetMCParaUpdateInit Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef wCh0Slaves As Long, ByRef wCh1Slaves As Long, ByRef dwCh0CycTime As Long, ByRef dwCh1CycTime As Long, ByRef dwChInfoMaxRetry As Long) As Long
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 함수
    Public Declare Function AxlM3SetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wIdx As Long, ByVal wChannel As Long, ByVal wSlaveAddr As Long, ByVal dwProtoCalType As Long, ByVal dwTransBytes As Long, ByVal dwDeviceCode As Long) As Long
    ' M-III Master 보드 CONNECT PARAMETER 기본 정보 전달 결과 확인 함수
    Public Declare Function AxlM3GetMCParaUpdateCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wIdx As Long, ByRef wChannel As Long, ByRef wSlaveAddr As Long, ByRef dwProtoCalType As Long, ByRef dwTransBytes As Long, ByRef dwDeviceCode As Long) As Long

    ' M-III Master 보드내에 레지스터를 DWord단위로 확인 함수
    Public Declare Function AxlBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef dwData As Long) As Long
    ' M-III Master 보드내에 레지스터를 DWord단위로 설정 함수
    Public Declare Function AxlBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByVal dwData As Long) As Long

    ' 보드내에 확장 레지스터를 DWord단위로 설정 및 확인한다.
    Public Declare Function AxlBoardReadDWordEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwOffset As Long, ByRef dwData As Long) As Long
    Public Declare Function AxlBoardWriteDWordEx Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwOffset As Long, ByVal dwData As Long) As Long

    ' 서보를 정지 모드로 설정 함수
    Public Declare Function AxmM3ServoSetCtrlStopMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bStopMode As Byte) As Long
    ' 서보를 Lt 선택 상태로 설정 함수
    Public Declare Function AxmM3ServoSetCtrlLtSel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bLtSel1 As Byte, ByVal bLtSel2 As Byte) As Long
    ' 서보의 IO 입력 상태를 확인 함수
    Public Declare Function AxmStatusReadServoCmdIOInput Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
    ' 서보의 보간 구동 함수
    Public Declare Function AxmM3ServoExInterpolate Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTPOS As Long, ByVal dwVFF As Long, ByVal dwTFF As Long, ByVal dwTLIM As Long, ByVal dwExSig1 As Long, ByVal dwExSig2 As Long) As Long
    ' 서보 엑츄레이터 바이어스 설정 함수
    Public Declare Function AxmM3ServoSetExpoAccBias Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wBias As Long) As Long
    ' 서보 엑츄레이터 시간 설정 함수
    Public Declare Function AxmM3ServoSetExpoAccTime Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wTime As Long) As Long
    ' 서보의 이동 시간을 설정 함수
    Public Declare Function AxmM3ServoSetMoveAvrTime Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wTime As Long) As Long
    ' 서보의 Acc 필터 설정 함수
    Public Declare Function AxmM3ServoSetAccFilter Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bAccFil As Byte) As Long
    ' 서보의 상태 모니터1 설정 함수
    Public Declare Function AxmM3ServoSetCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bMonSel As Byte) As Long
    ' 서보의 상태 모니터2 설정 함수
    Public Declare Function AxmM3ServoSetCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal bMonSel As Byte) As Long
    ' 서보의 상태 모니터1 확인 함수
    Public Declare Function AxmM3ServoStatusReadCprmMonitor1 Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
    ' 서보의 상태 모니터2 확인 함수
    Public Declare Function AxmM3ServoStatusReadCprmMonitor2 Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long
    ' 서보 엑츄레이터 Dec 설정 함수
    Public Declare Function AxmM3ServoSetAccDec Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal wAcc1 As Long, ByVal wAcc2 As Long, ByVal wAccSW As Long, ByVal wDec1 As Long, ByVal wDec2 As Long, ByVal wDecSW As Long) As Long
    ' 서보 정지 설정 함수
    Public Declare Function AxmM3ServoSetStop Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lMaxDecel As Long) As Long

    '========== 표준 I/O 기기 공통 커맨드 =========================================================================
    ' Network제품 각 슬레이브 기기의 파라미터 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Long, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
    ' Network제품 각 슬레이브 기기의 파라미터 값을 설정하는 함수
    Public Declare Function AxlM3SetStationParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Long, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
    ' Network제품 각 슬레이브 기기의 ID값을 반환하는 함수
    Public Declare Function AxlM3GetStationIdRd Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bIdCode As Byte, ByVal bOffset As Byte, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
    ' Network제품 각 슬레이브 기기의 무효 커맨드로 사용하는 함수
    Public Declare Function AxlM3SetStationNop Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기의 셋업을 실시하는 함수
    Public Declare Function AxlM3SetStationConfig Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bConfigMode As Byte, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기의 알람 및 경고 상태 값을 반환하는 함수
    Public Declare Function AxlM3GetStationAlarm Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wAlarmRdMod As Long, ByVal wAlarmIndex As Long, ByVal bModuleType As Byte, ByRef pwAlarmData As Long) As Long
    ' Network제품 각 슬레이브 기기의 알람 및 경고 상태를 해제하는 함수
    Public Declare Function AxlM3SetStationAlarmClear Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wAlarmClrMod As Long, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기와의 동기통신을 설정하는 함수
    Public Declare Function AxlM3SetStationSyncSet Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기와의 연결을 설정하는 함수
    Public Declare Function AxlM3SetStationConnect Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bVer As Byte, ByVal bComMode As Byte, ByVal bComTime As Byte, ByVal bProfileType As Byte, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기와의 연결 끊음을 설정하는 함수
    Public Declare Function AxlM3SetStationDisConnect Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal bModuleType As Byte) As Long
    ' Network제품 각 슬레이브 기기의 비휘발성 파라미터 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Long, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
    ' Network제품 각 슬레이브 기기의 비휘발성 파라미터 값을 설정하는 함수
    Public Declare Function AxlM3SetStationStoredParameter Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wNo As Long, ByVal bSize As Byte, ByVal bModuleType As Byte, ByRef pbParam As Byte) As Long
    ' Network제품 각 슬레이브 기기의 메모리 설정 값을 반환하는 함수
    Public Declare Function AxlM3GetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wSize As Long, ByVal dwAddress As Long, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Long
    ' Network제품 각 슬레이브 기기의 메모리 값을 설정하는 함수
    Public Declare Function AxlM3SetStationMemory Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal lModuleNo As Long, ByVal wSize As Long, ByVal dwAddress As Long, ByVal bModuleType As Byte, ByVal bMode As Byte, ByVal bDataType As Byte, ByRef pbData As Byte) As Long
